tests/scan/fixtures/validation/negative/clean_go_clean-cache-client/go.mod
module github.com/example/clean-cache-client
go 1.21
